# cpp-utils

./: CMakeLists.txt  README.md  csv.h  csv_io.h  file_io.h
include/util/: config.h  file_io.h
samples/: CMakeLists.txt  ceres_sample.cpp  g2o_sample.cpp  opencv_sample.cpp  sophus_sample.cpp
test/: CMakeLists.txt  main_test.cpp
test/data/: config.ini  rand.csv  table.csv
util/: config.h  file_io.h
